<resources>
    <!--权限-->
    <string name="library_permissions_refuse_authorization" translatable="false">被永久拒绝授权，请手动授予权限</string>
    <string name="library_permissions_error" translatable="false">获取权限失败</string>

    <!--标题-->
    <string name="library_title_close" translatable="false">关闭</string>
    <string name="library_title_save" translatable="false">保存</string>

    <!--个人界面-->
    <string name="library_my_setting_title" translatable="false">我的账户</string>
    <string name="library_my_setting_avatar" translatable="false">头像</string>
    <string name="library_my_setting_name" translatable="false">昵称</string>
    <string name="library_my_setting_version" translatable="false">应用版本</string>
    <string name="library_my_setting_logout" translatable="false">退出登录</string>

    <!--上传图片\修改昵称-->
    <string name="library_dialog_midify_name" translatable="false">修改昵称</string>
    <string name="library_dialog_modify_cancel" translatable="false">取消</string>
    <string name="library_dialog_modify_sure" translatable="false">确定</string>
    <string name="library_dialog_modify_take_photo" translatable="false">拍一张</string>
    <string name="library_dialog_modify_select_photo" translatable="false">从相册中选择</string>
    <string name="library_modify_name_empty" translatable="false">昵称不能为空</string>
    <string name="library_modify_no_name" translatable="false">昵称未做修改</string>
    <string name="library_modify_name_error" translatable="false">修改昵称失败，请稍后再试</string>
    <string name="library_upload_pic_error" translatable="false">上传失败，请稍后再试</string>
    <string name="library_upload_notice" translatable="false">上传中...</string>
    <string name="library_net_error" translatable="false">网络异常，请稍后再试</string>
    <string name="library_net_error_click_link" translatable="false">网络异常，请点击重试</string>
    <string name="library_loading_notice" translatable="false">加载中...</string>
    <string name="library_dialog_hint" translatable="false">提示</string>
    <string name="library_dialog_ikonw" translatable="false">我知道了</string>
    <string name="library_notice_building" translatable="false">功能暂未开放...</string>

    <!--camera-->
    <string name="library_camera_not_exist" translatable="false">摄像头不存在</string>
</resources>