<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/library_main_force_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tipTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/library_dialog_midify_name"
        android:textColor="@color/grey_33"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/library_modify_group_name_shape"
        android:orientation="horizontal">

        <com.taxiao.cn.commonlibrary.view.edittext.ClearEditText
            android:id="@+id/et_modify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="15dp"
            android:gravity="start|center_vertical"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/grey_33"
            android:textColorHint="@color/grey_99"
            android:textSize="13sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_e2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/library_dialog_modify_cancel"
            android:textColor="@color/grey_99"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey_e2" />

        <TextView
            android:id="@+id/save_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/library_dialog_modify_sure"
            android:textColor="@color/grey_66"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
